--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^0.33.0",
     "eslint": "^8.44.0",
     "eslint-plugin-import": "^2.29.0",
